==> oclyke/openmv/src/omv/ports/mimxrt/omv_spi.c <==
#include "py/mphal.h"
#include "fsl_dmamux.h"
#include "fsl_gpio.h"
#include "fsl_iomuxc.h"
#include "fsl_lpspi.h"
#include "fsl_lpspi_edma.h"
#include CLOCK_CONFIG_H
#include "dma_manager.h"
#include "omv_boardconfig.h"
#include "mimxrt_hal.h"
#include "omv_common.h"
#include "omv_spi.h"

int omv_spi_transfer_start(omv_spi_t *spi, omv_spi_transfer_t *xfer) {
    spi->callback = xfer->callback;
    spi->userdata = xfer->userdata;
    spi->xfer_error = 0;
    spi->xfer_flags = xfer->flags;

    if (!xfer->datasize) {
        xfer->datasize = 8;
    }

    omv_spi_set_frame_size(spi, xfer->datasize);

    spi->xfer_descr.txData = xfer->txbuf;
    spi->xfer_descr.rxData = xfer->rxbuf;
    spi->xfer_descr.dataSize = xfer->size;
    spi->xfer_descr.configFlags = kLPSPI_MasterPcs0 | kLPSPI_MasterPcsContinuous;

    if (xfer->datasize == 16) {
        spi->xfer_descr.dataSize *= 2;
    }

    if (spi->dma_mode & OMV_SPI_HALF_CB_EN) {
        spi->xfer_descr.dataSize /= 2;
    }

    // Check if we can optimize the transfer by doing things in 32-bit chunks.
    if ((!(spi->xfer_descr.dataSize % 4)) && (xfer->datasize == 8)) {
        omv_spi_set_frame_size(spi, 32);
        spi->xfer_descr.configFlags |= kLPSPI_MasterByteSwap;
    }

    spi->xfer_flags &= ~(OMV_SPI_XFER_FAILED | OMV_SPI_XFER_COMPLETE | OMV_SPI_XFER_HALF);

    if (spi->xfer_flags & OMV_SPI_XFER_BLOCKING) {
        if (LPSPI_MasterTransferBlocking(spi->inst, &spi->xfer_descr) != kStatus_Success) {
            return -1;
        }
    } else if (spi->xfer_flags & OMV_SPI_XFER_NONBLOCK) {
        if (LPSPI_MasterTransferNonBlocking(spi->inst, &spi->descr_master, &spi->xfer_descr) != kStatus_Success) {
            return -1;
        }
    } else if (spi->xfer_flags & OMV_SPI_XFER_DMA) {
        if (LPSPI_MasterTransferEDMA(spi->inst, &spi->descr_master_edma, &spi->xfer_descr) != kStatus_Success) {
            return -1;
        }
        if (xfer->txbuf) {
            // There isn't a race condition here to worry about since the major interrupt status flag
            // will remain asserted even if the DMA transfer was to complete before we enable the interrupt.
            EDMA_SetCallback(&spi->dma_descr_tx, EDMA_LpspiMasterTxCallback, spi);
            EDMA_EnableChannelInterrupts(spi->dma_descr_tx.base, spi->dma_descr_tx.channel,
                                        (uint32_t)kEDMA_MajorInterruptEnable);
        }
    } else {
        return -1;
    }
    return 0;
}

int omv_spi_transfer_abort(omv_spi_t *spi) {
    if (spi->dma_mode & (OMV_SPI_DMA_NORMAL | OMV_SPI_DMA_CIRCULAR)) {
        LPSPI_MasterTransferAbortEDMA(spi->inst, &spi->descr_master_edma);
    }
    LPSPI_MasterTransferAbort(spi->inst, &spi->descr_master);
    LPSPI_MasterInit(spi->inst, &spi->config_backup, BOARD_BOOTCLOCKRUN_LPSPI_CLK_ROOT);
    return 0;
}

static int omv_spi_dma_init(edma_handle_t *dma_handle, const dma_descr_t *dma_descr) {
    int channel = allocate_dma_channel();
    DMAMUX_SetSource(DMAMUX, channel, dma_descr->request);
    DMAMUX_EnableChannel(DMAMUX, channel);
    EDMA_CreateHandle(dma_handle, DMA0, channel);
    return 0;
}

int omv_spi_init(omv_spi_t *spi, omv_spi_config_t *config) {
    memset(spi, 0, sizeof(omv_spi_t));

    const omv_spi_descr_t *spi_descr = &omv_spi_descr_all[config->id - 1];
    if (spi_descr->inst == NULL) {
        return -1;
    }

    spi->id = config->id;
    spi->inst = spi_descr->inst;
    spi->cs = spi_descr->cs;

    lpspi_master_config_t spi_config;
    LPSPI_MasterGetDefaultConfig(&spi_config);

    spi_config.baudRate = config->baudrate;
    spi_config.bitsPerFrame = config->datasize;
    spi_config.cpol = config->clk_pol;
    spi_config.cpha = config->clk_pha;
    spi_config.direction = config->bit_order;
    spi_config.pcsToSckDelayInNanoSec = 0;
    spi_config.lastSckToPcsDelayInNanoSec = 0;
    spi_config.betweenTransferDelayInNanoSec = 0;
    spi_config.whichPcs = kLPSPI_Pcs0;
    spi_config.pcsActiveHighOrLow = config->nss_pol;
    spi_config.pinCfg = kLPSPI_SdiInSdoOut;
    spi_config.dataOutConfig = config->data_retained ? kLpspiDataOutRetained : kLpspiDataOutTristate;
    spi_config.enableInputDelay = false;
    LPSPI_MasterInit(spi->inst, &spi_config, BOARD_BOOTCLOCKRUN_LPSPI_CLK_ROOT);
    spi->config_backup = spi_config;

    // Configure pins.
    mimxrt_hal_spi_init_deinit(config->id, config->nss_enable, config->nss_pol, true);

    LPSPI_MasterTransferCreateHandle(
        spi->inst,
        &spi->descr_master,
        (lpspi_master_transfer_callback_t) spi_master_callback,
        spi);

    if (config->dma_mode & (OMV_SPI_DMA_NORMAL | OMV_SPI_DMA_CIRCULAR)) {
        // Configure DMA.
        // Note the FSL driver doesn't support half-duplex, so the both
        // TX/RX channels, descriptors etc... must be initialized.
        omv_spi_dma_init(&spi->dma_descr_tx, &spi_descr->dma_descr_tx);
        omv_spi_dma_init(&spi->dma_descr_rx, &spi_descr->dma_descr_rx);

        // Link TX/RX DMA descriptors to SPI descriptor.
        LPSPI_MasterTransferCreateHandleEDMA(
            spi->inst,
            &spi->descr_master_edma,
            (lpspi_master_edma_transfer_callback_t) spi_master_callback,
            spi,
            &spi->dma_descr_rx,
            &spi->dma_descr_tx);
    }

    spi->initialized = true;
    spi->dma_mode = config->dma_mode;
    return 0;
}

int omv_spi_deinit(omv_spi_t *spi) {
    if (spi && spi->initialized) {
        spi->initialized = false;
        omv_spi_transfer_abort(spi);
        if (spi->dma_mode & (OMV_SPI_DMA_NORMAL | OMV_SPI_DMA_CIRCULAR)) {
            DMAMUX_DisableChannel(DMAMUX, spi->dma_descr_tx.channel);
            free_dma_channel(spi->dma_descr_tx.channel);
            DMAMUX_DisableChannel(DMAMUX, spi->dma_descr_rx.channel);
            free_dma_channel(spi->dma_descr_rx.channel);
        }
        LPSPI_Deinit(spi->inst);
        mimxrt_hal_spi_init_deinit(spi->id, false, false, false);
    }
    return 0;
}

int omv_spi_default_config(omv_spi_config_t *config, uint32_t bus_id) {
    config->id = bus_id;
    config->baudrate = 10000000;
    config->datasize = 8;
    config->spi_mode = OMV_SPI_MODE_MASTER;
    config->bus_mode = OMV_SPI_BUS_TX_RX;
    config->bit_order = OMV_SPI_MSB_FIRST;
    config->clk_pol = OMV_SPI_CPOL_HIGH;
    config->clk_pha = OMV_SPI_CPHA_1EDGE;
    config->nss_pol = OMV_SPI_NSS_LOW;
    config->nss_enable = true;
    config->dma_mode = 0;
    config->dma_size = 1;
    config->data_retained = true;
    return 0;
}
